# libos

./: CMakeLists.txt
include/libos/: defines.h  error.h  init.h  memory.h
include/libos/_/: windows_helpers.h
src/common/: error.c  init.c
src/windows/: error.c  helpers.c  memory.c
